--- a/Vine 2.0/Base.lproj/Main.storyboard
+++ b/Vine 2.0/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -91,7 +91,10 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YZP-ux-WL6">
                                 <rect key="frame" x="291" y="196" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="Image3Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BNK-ss-fRD"/>
                                 </connections>
@@ -255,7 +258,7 @@
                     <connections>
                         <outlet property="gifFour" destination="MdX-bi-OOG" id="XOQ-IN-fok"/>
                         <outlet property="gifOne" destination="gtp-Ca-8SD" id="P9T-Wy-E69"/>
-                        <outlet property="gifThree" destination="qYX-kZ-WK5" id="DqD-WZ-deh"/>
+                        <outlet property="gifThree" destination="qYX-kZ-WK5" id="gI3-J5-7Dm"/>
                         <outlet property="gifTwo" destination="bJd-4H-eyx" id="xfP-kZ-Y0A"/>
                     </connections>
                 </viewController>
